[package]
name = "cap"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
passing-macro = { git = "https://github.com/Radbuglet/passing-macro.git", rev = "dcf7b70d9e8431a4985c7affeefb68117eda9b4f" }
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
