[package]
name = "cap"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
passing-macro = { git = "https://github.com/Radbuglet/passing-macro.git", rev = "af5079dfd2c11265ac958697053b94b722b67975" }
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
